extracting the cpu usage from /proc/stat